--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
           <li class="dropdown"><a href="#"><span>Category</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               {% for cg in category %}
-              <li><a href="#">{{ cg.title }}</a></li>
+              <li><a href={% url 'course:course_cat' cat=cg.title %}>{{ cg.title }}</a></li>
               {% endfor %}
             </ul>
           </li>
