--- a/templates/course/courses.html
+++ b/templates/course/courses.html
@@ -39,7 +39,7 @@
                   <p class="price">{{cr.price}}</p>
                 </div>
 
-                <h3><a href="course-details.html">{{cr.title}}</a></h3>
+                <h3><a href={% url 'course:course_datail' id=cr.id %}>{{cr.title}}</a></h3>
                 <p>{{cr.content|truncatechars:50}}</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
@@ -63,13 +63,24 @@
       </div>
     </section><!-- End Courses Section -->
     <div align="center" style="font-size:35px;">
-      <a href="#"><<</a>
+      {% if  courses.has_next and courses.has_previous %}
+      <a href="?page={{first}}"><<</a>
       <a href="#">....</a>
-      <a href="#"><  </a>
+      <a href="?page={{courses.previous_page_number}}"><</a>
       <a href="#">....</a>
-      <a href="#">></a>
+      <a href="?page={{courses.next_page_number}}">></a>
       <a href="#">....</a>
-      <a href="#">>></a>
+      <a href="?page={{last}}">>></a>
+      {% elif courses.has_next %}
+      <a href="?page={{courses.next_page_number}}">></a>
+      <a href="#">....</a>
+      <a href="?page={{last}}">>></a>
+      {% elif courses.has_previous %}
+      <a href="?page={{first}}"><<</a>
+      <a href="#">....</a>
+      <a href="?page={{courses.previous_page_number}}"><  </a>
+      {% endif %}
+
     </div>
 
   </main><!-- End #main -->
